# mistral-vs-zephyr-extraction

./: 01_llm_zephyr_7b_clean.ipynb  DESIGN.md  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
cpp/include/: freshness_policy.h  trade_record.h  validation_result.h  validator.h
cpp/src/: validator.cpp
cpp/tests/: test_validator.cpp
notebooks/: 01_llm_mistral_7b_clean.ipynb
outputs/benchmarks/: benchmark_summary.csv  benchmark_summary.md  raw_benchmark_metrics.csv
src/: parsing.py  prompts.py  validation.py
